--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       type="text/javascript"
       src="https://d3mkw6s8thqya7.cloudfront.net/integration-plugin.js"
       id="aisensy-wa-widget"
-      widget-id="BjO8Jo"
+      widget-id="TPtrLV"
     >
     </script>
 	
